--- a/web/templates/joblist_view.html
+++ b/web/templates/joblist_view.html
@@ -10,7 +10,7 @@
                 <div class="content">
                   <h4><a href="job-details/{{job.pk}}/">{{job.title}}</a></h4>
                   <div class="info">
-                    <span class="company"><a href="#"><i data-feather="briefcase"></i>{{job.company.name}}</a></span>
+                    <span class="company"><a href="company-details/{{job.company.pk}}"><i data-feather="briefcase"></i>{{job.company.name}}</a></span>
                     <span class="office-location"><a href="#"><i data-feather="map-pin"></i>{{job.location}}</a></span>
                     <span class="job-type full-time"><a href="#"><i data-feather="clock"></i>{{job.jobtype}}</a></span>
                   </div>
