--- a/web/templates/navbar.html
+++ b/web/templates/navbar.html
@@ -9,39 +9,10 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto job-browse">
-            <li class="nav-item dropdown">
-              <a class="dropdown-toggle" href= "#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Browse Jobs</a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li class="search-by">
-                  <h5>BY Category</h5>
-                  <ul>
-                    <li><a href= "#">Accounting / Finance <span>(233)</span></a></li>
-                    <li><a href= "#">Education <span>(46)</span></a></li>
-                    <li><a href= "#">Design & Creative <span>(156)</span></a></li>
-                    <li><a href= "#">Health Care <span>(98)</span></a></li>
-                    <li><a href= "#">Engineer & Architects <span>(188)</span></a></li>
-                    <li><a href= "#">Marketing & Sales <span>(124)</span></a></li>
-                    <li><a href= "#">Garments / Textile <span>(584)</span></a></li>
-                    <li><a href= "#">Customer Support <span>(233)</span></a></li>
-                  </ul>
-                </li>
-                <li class="search-by">
-                  <h5>BY LOcation</h5>
-                  <ul>
-                    <li><a href= "#">New York City <span>(508)</span></a></li>
-                    <li><a href= "#">Washington, D.C <span>(96)</span></a></li>
-                    <li><a href= "#">Chicago <span>(155)</span></a></li>
-                    <li><a href= "#">San Francisco <span>(24)</span></a></li>
-                    <li><a href= "#">Los Angeles <span>(268)</span></a></li>
-                    <li><a href= "#">Boston <span>(46)</span></a></li>
-                  </ul>
-                </li>
-              </ul>
-            </li>
-          </ul>
           <ul class="navbar-nav ml-auto main-nav">
+            {% if user.user_type == 2 or user.user_type == 4 %}
             <li class="menu-item post-job"><a title="Title" href="/employer-dashboard-post-job"><i class="fas fa-plus"></i>Post a Job</a></li>
+            {% endif %}
             {% if user.is_authenticated %}
             <li class="menu-item post-job"><a title="Title" href="/jobApplications"><i class="fas"></i>See Applications</a></li>
               {% if user.user_type == 4 %}
@@ -51,6 +22,7 @@
           </ul>
           <ul class="navbar-nav ml-auto account-nav">
             <li class="dropdown menu-item header-top-notification">
+              {% if user.user_type == 1 %}
               <a href= "#" class="notification-button"></a>
               
               <div class="notification-card">
@@ -89,6 +61,7 @@
                   <a href= "#">See all notification</a>
                 </div>
               </div>
+              {% endif %}
             </li>
             {% if user.is_authenticated %}
             <li class="menu-item login-popup"><a> {{user.email}}</a></li>
@@ -138,7 +111,7 @@
                     <a href= "#" class="facebook"><i class="fab fa-facebook-f"></i>Facebook</a>
                     <a href= "#" class="google"><i class="fab fa-google"></i>Google</a>
                   </div>
-                  <p>Don't have an account? <a href= "#">Register</a></p>
+                  <p>Don't have an account? <a href= "/register">Register</a></p>
                 </div>
               </div>
             </div>
@@ -191,11 +164,10 @@
                     <a href= "#" class="facebook"><i class="fab fa-facebook-f"></i>Facebook</a>
                     <a href= "#" class="google"><i class="fab fa-google"></i>Google</a>
                   </div>
-                  <p>Already have an account? <a href= "#">Login</a></p>
+                  <p>Already have an account? <a href= "/login">Login</a></p>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      
