--- a/web/templates/job-details.html
+++ b/web/templates/job-details.html
@@ -143,7 +143,7 @@
                   {% if user.is_authenticated and user.user_type == 4 %}
                     <a class="save" href="/admin/joblistings/jobpdfdescription/{{downloadPk}}/change/"><i data-feather="heart"></i>Edit PDF</a>
                   {% endif %}
-                    <a class="apply" href="/jobDescription/{{download}}" data-toggle="modal" data-target="#apply-popup-id">PDF Description</a>
+                    <a class="apply" href="/jobDescription/{{download}}">PDF Description</a>
                   {% endif %}
                   {% if user.is_authenticated and user.user_type == 4 %}
                   <form method="POST" class="candidate-details">
@@ -180,7 +180,7 @@
                       </ul>
                     </div>
                     <div class="job-apply-buttons">
-                      <a href="/add-resume/{{pk}}" class="apply"  data-toggle="modal" data-target="#apply-popup-id">Apply Online</a>
+                      <a href="/add-resume/{{pk}}" class="apply">Apply Online</a>
                       <a href="#" class="email"><i data-feather="mail"></i>Email Job</a>
                     </div>
                   </div>
