Added job apply cache and autocomplete, dynamic file storage path

--- a/web/templates/dashboard-ranking-candidate.html
+++ b/web/templates/dashboard-ranking-candidate.html
@@ -208,7 +208,7 @@
                     <li><i class="fas fa-briefcase"></i><a href="/manageJobs/">Manage Jobs</a></li>
                     {% endif %}
                     <li><i class="fas fa-users"></i><a href="/jobApplications/">Manage Applications</a></li>
-                    <li class="active"><i class="fas fa-heart"></i><a href="/employerRanking">Interview Ranking</a></li>
+                    <li class="active"><i class="fas fa-heart"></i><a href="/candidateRanking">Interview Ranking</a></li>
                     {% if user.user_type == 4 %}
                     <li><i class="fas fa-plus-square"></i><a href="/matchDay">Admin Matchday</a></li>
                     {% endif %}
