changed upload size, added reupload pdf, full support additional doc

--- a/web/templates/add-resume.html
+++ b/web/templates/add-resume.html
@@ -277,6 +277,7 @@
                       <label class="col-md-3 col-form-label">Upload CV <i data-feather="upload-cloud"></i></label>
                       <div class="col-md-9">
                           {{form.resume}}
+                          {{form.oldResumes}}
                       </div>
                     </div>
                     <div id="cv" class="row form-group">
